syntax = "proto3";
package book;

service Books {
    rpc GetBookList(GetBookListReq) returns (GetBookListRsp) {}
    rpc AddBooks(AddBooksReq) returns (AddBooksRsp) {}
    rpc UpdateBooks(UpdateBooksReq) returns (UpdateBooksRsp) {}
    rpc DeleteBooks(DeleteBooksReq) returns (DeleteBooksRsp) {}
}

message Book {
    int64 id = 1;
    string name = 2;
    string author = 3;
    string publish = 4;
    string introduction = 5;
    int64 number = 6;
    int64 max_number = 7;
    string ISBN = 8;
}

message GetBookListReq {
    string name = 1;
    string author = 2;
    string publish = 3;
}

message GetBookListRsp {
    int64 code = 1;
    repeated Book books = 2;
}

message AddBooksReq {
    repeated Book books = 1;
}

message AddBooksRsp {
    int64 code = 1;
    string msg = 2;
}

message UpdateBooksReq {
    repeated Book books = 1;
}

message UpdateBooksRsp {
    int64 code = 1;
    string msg = 2;
}

message DeleteBooksReq {
    repeated Book books = 1;
}

message DeleteBooksRsp {
    int64 code = 1;
    string msg = 2;
}



